added more interface

--- a/game.html
+++ b/game.html
@@ -12,5 +12,8 @@
     <script type="text/javascript" src="js/p5.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/elements.js"></script>
+    <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/card.js"></script>
+    <script type="text/javascript" src="js/question.js"></script>
   </body>
 </html>
