--- a/game.html
+++ b/game.html
@@ -15,5 +15,7 @@
     <script type="text/javascript" src="js/player.js"></script>
     <script type="text/javascript" src="js/card.js"></script>
     <script type="text/javascript" src="js/question.js"></script>
+    <script type="text/javascript" src="js/assignment.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
   </body>
 </html>
