--- a/game.html
+++ b/game.html
@@ -5,10 +5,7 @@
     <title>Game</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
-    <section class="game">
-
-    </section>
+  <body class="gamebody">
     <script type="text/javascript" src="js/p5.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/elements.js"></script>
